agregar option id de ventrata

--- a/frontend/app.html
+++ b/frontend/app.html
@@ -22,7 +22,7 @@
     <meta name="facebook-domain-verification" content="dv550ikyo386i086j1sokc35xnilrn" />
     <link  rel="prerender stylesheet" as="style" type="text/css" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
 
-    <script src='https://cdn.checkout.ventrata.com/v3/production/ventrata-checkout.min.js' type='module' data-config='{"apiKey":"e98cbbf7-6ed8-4bfa-b192-500eaba4ebbb", "env": "test" }'></script>
+    <script src='https://cdn.checkout.ventrata.com/v3/production/ventrata-checkout.min.js' type='module' data-config='{"apiKey":"e98cbbf7-6ed8-4bfa-b192-500eaba4ebbb", "env": "live" }'></script>
 
   </head>
   <body {{ BODY_ATTRS }}>
